--- a/stylesheets/sass/main-stylesheet.scss
+++ b/stylesheets/sass/main-stylesheet.scss
@@ -1,9 +1,91 @@
+@import "fonts";
+@import "colors";
+
 body {
-    margin: 0;
+    background-color: $backgroundColorMain;
+    color: $lightText;
+}
+
+.jumbotron {
+    position: relative;
     overflow: hidden;
-    background-image: url(/assets/background-westeros.png);
-    background-position: center;
-    background-position-y: 0;
-    background-repeat: no-repeat;
-    background-size: inherit;
+    background-color: $black;
+    height: 60vh;
+    margin-bottom: 0;
+
+    video {
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        width:100%;
+        height:100%;
+        /*  object-fit is not supported on IE  */
+        object-fit: cover;
+        opacity:0.5;
+    }
+
+    .container {
+        z-index: 2;
+        position: relative;
+
+        h1 {
+            text-align: center;
+            color: #DC832E;
+            background: linear-gradient(to right, $orange 0%, $red 100%);
+	        -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .lead {
+            text-align: center;
+        }
+
+        .logo {
+            width: 100%;
+            background-color: rgb(255, 255, 255, .3);
+            border-radius: 10px;
+            margin-bottom: 30px;
+        }
+    }
+}
+
+.container--house {
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.container-fluid {
+    background: rgb(0,0,0);
+    background: linear-gradient(320deg, $black 0%, $backgroundColorMain 50%, $darkGrey 100%);
+    padding-top: 100px;
+    padding-bottom: 150px;
+
+    .container {
+        h2 {
+            color: $orange;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+    
+        .card {
+            background-color: $backgroundColorMain;
+            margin-bottom: 10px;
+            border: 1px solid $darkGrey;
+            border-radius: 10px;
+            box-shadow: 0px 10px 10px #303030;
+        }
+
+        .btn-lg {
+            justify-content: center;
+            width: 250px;
+            margin-top: 30px;
+        }
+    }
+}
+
+footer {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    background-color: $black;
 }
