--- a/stylesheets/public/main-stylesheet.css
+++ b/stylesheets/public/main-stylesheet.css
@@ -6,6 +6,16 @@ body h1, body h2, body h3, body h4, body h5, body h6 {
   font-family: "Calistoga", cursive;
 }
 
+@keyframes neonGlow {
+  0%, 100% {
+    text-shadow: 0 0 0.5vw #DC832E, 0 0 1.5vw #BF2424, 0 0 5vw #BF2424, 0 0 5vw #BF2424, 0 0 0.2vw #DC832E, 0.25vw 0.25vw 0.05vw #806914;
+    color: #DC832E;
+  }
+  50% {
+    text-shadow: 0 0 0.25vw #800E0B, 0 0 0.75vw #800E0B, 0 0 2.5vw #800E0B, 0 0 2.5vw #800E0B, 0 0 0.1vw #800E0B, 0.25vw 0.25vw 0.05vw #40340A;
+    color: #806914;
+  }
+}
 body {
   background-color: #212529;
   color: #ffffff;
@@ -15,7 +25,7 @@ body {
   position: relative;
   overflow: hidden;
   background-color: #000000;
-  height: 60vh;
+  height: auto;
   margin-bottom: 0;
 }
 .jumbotron video {
@@ -26,7 +36,7 @@ body {
   height: 100%;
   /*  object-fit is not supported on IE  */
   object-fit: cover;
-  opacity: 0.5;
+  opacity: 0.4;
 }
 .jumbotron .container {
   z-index: 2;
@@ -38,9 +48,16 @@ body {
   background: linear-gradient(to right, #DC832E 0%, #BF2424 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  animation: neonGlow 2s infinite alternate cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 .jumbotron .container .lead {
   text-align: center;
+}
+.jumbotron .container .quote {
+  font-style: italic;
+}
+.jumbotron .container .author {
+  text-align: right;
 }
 .jumbotron .container .logo {
   width: 100%;
@@ -74,8 +91,14 @@ body {
 }
 .container-fluid .container .btn-lg {
   justify-content: center;
+  color: rgba(255, 255, 255, 0.8);
   width: 250px;
   margin-top: 30px;
+  transition: all 0.2s ease-in-out;
+}
+.container-fluid .container .btn-lg:hover {
+  color: white;
+  box-shadow: 0 5px 15px rgba(109, 180, 255, 0.4);
 }
 
 footer {
