--- a/stylesheets/sass/main-stylesheet.scss
+++ b/stylesheets/sass/main-stylesheet.scss
@@ -65,8 +65,11 @@ body {
 }
 
 .container-fluid {
-    background: rgb(0,0,0);
-    background: linear-gradient(320deg, $black 0%, $backgroundColorMain 50%, $darkGrey 100%);
+    background-color: $backgroundColorMain;
+    background-image: url(/assets/night-king-background.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     padding-top: 100px;
     padding-bottom: 150px;
 
