--- a/stylesheets/public/final-stylesheet.css
+++ b/stylesheets/public/final-stylesheet.css
@@ -21,12 +21,33 @@ body {
   color: #ffffff;
 }
 
-h1 {
-  text-align: center;
-}
-
 .container-fluid {
-  height: 100vh;
+  height: 95vh;
+  background-image: url(/assets/night-king-background2.jpg);
+  background-size: cover;
+  background-repeat: repeat;
+  background-position: center;
+}
+.container-fluid h1 {
+  text-align: right;
+  padding-top: 100px;
+  padding-right: 20px;
+}
+.container-fluid .lead {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  text-align: right;
+}
+.container-fluid .btn-lg {
+  justify-content: center;
+  color: rgba(255, 255, 255, 0.8);
+  width: 250px;
+  margin-top: 30px;
+  transition: all 0.2s ease-in-out;
+}
+.container-fluid .btn-lg:hover {
+  color: white;
+  box-shadow: 0 5px 15px rgba(109, 180, 255, 0.4);
 }
 
 footer {
