--- a/stylesheets/sass/board-stylesheet.scss
+++ b/stylesheets/sass/board-stylesheet.scss
@@ -51,6 +51,12 @@ body {
         }
     }
 
+    #characterToken {
+        img {
+            height: 150px;
+        }
+    }
+
     #diceRoller {
         margin-top: 50px;
 
