--- a/stylesheets/sass/final-stylesheet.scss
+++ b/stylesheets/sass/final-stylesheet.scss
@@ -15,7 +15,7 @@ body {
     background-position: center;
 
     h1 {
-        text-align: right;
+        text-align: center;
         padding-top: 100px;
         padding-right: 20px;
     }
@@ -23,7 +23,7 @@ body {
     .lead {
         margin-top: 100px;
         margin-bottom: 100px;
-        text-align: right;
+        text-align: center;
     }
 
     .btn-lg {
