--- a/stylesheets/public/main-stylesheet.css
+++ b/stylesheets/public/main-stylesheet.css
@@ -85,12 +85,26 @@ body {
   text-align: center;
   margin-bottom: 30px;
 }
+.container-fluid .container .col-md-3 {
+  margin-bottom: 30px;
+}
 .container-fluid .container .card {
   background-color: #212529;
-  margin-bottom: 10px;
   border: 1px solid #2b353e;
   border-radius: 10px;
   box-shadow: 0px 10px 10px #303030;
+}
+.container-fluid .container .card .card-img-top {
+  border-radius: 10px 10px 0px 0px;
+}
+.container-fluid .container .card .card-title {
+  color: #DC832E;
+}
+.container-fluid .container .card:active {
+  border: 2px solid #BF2424;
+}
+.container-fluid .container .card:hover {
+  cursor: pointer;
 }
 .container-fluid .container .btn-lg {
   justify-content: center;
