--- a/stylesheets/sass/main-stylesheet.scss
+++ b/stylesheets/sass/main-stylesheet.scss
@@ -79,13 +79,32 @@ body {
             text-align: center;
             margin-bottom: 30px;
         }
+
+        .col-md-3 {
+            margin-bottom: 30px;
+        }
     
         .card {
             background-color: $backgroundColorMain;
-            margin-bottom: 10px;
             border: 1px solid $darkGrey;
             border-radius: 10px;
             box-shadow: 0px 10px 10px #303030;
+
+            .card-img-top {
+                border-radius: 10px 10px 0px 0px;
+            }
+
+            .card-title {
+                color: $orange;
+            }
+
+            &:active {
+                border: 2px solid $red;
+            }
+
+            &:hover {
+                cursor: pointer;
+            }
         }
 
         .btn-lg {
