--- a/stylesheets/sass/board-stylesheet.scss
+++ b/stylesheets/sass/board-stylesheet.scss
@@ -84,10 +84,14 @@ body {
             }
         }
 
+        #diceAlert {
+            margin-top: 20px;
+            color: $orange;
+        }
+
         .btn-lg {
             color: rgba(255, 255, 255, .8);
             width: 250px;
-            margin-top: 30px;
             transition: all 0.2s ease-in-out;
 
             &:hover {
