--- a/stylesheets/public/main-stylesheet.css
+++ b/stylesheets/public/main-stylesheet.css
@@ -77,44 +77,44 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding-top: 100px;
-  padding-bottom: 150px;
+  padding-top: 30px;
+  padding-bottom: 50px;
 }
-.container-fluid .container h2 {
+.container-fluid .characters h2 {
   color: #DC832E;
   text-align: center;
   margin-bottom: 30px;
 }
-.container-fluid .container .col-md-3 {
+.container-fluid .characters .col-md-3 {
   margin-bottom: 30px;
 }
-.container-fluid .container .card {
+.container-fluid .characters .card {
   background-color: #212529;
   border: 1px solid #2b353e;
   border-radius: 10px;
   box-shadow: 0px 10px 10px #303030;
 }
-.container-fluid .container .card .card-img-top {
+.container-fluid .characters .card .card-img-top {
   border-radius: 10px 10px 0px 0px;
 }
-.container-fluid .container .card .card-title {
+.container-fluid .characters .card .card-title {
   color: #DC832E;
 }
-.container-fluid .container .card:hover {
+.container-fluid .characters .card:hover {
   cursor: pointer;
 }
-.container-fluid .container .card:focus {
+.container-fluid .characters .card:focus {
   outline: none;
   box-shadow: 0 0 3px 1px #fff, 0 0 6px 3px #BF2424, 0 0 9px 5px #DC832E;
 }
-.container-fluid .container .btn-lg {
+.container-fluid .characters .btn-lg {
   justify-content: center;
   color: rgba(255, 255, 255, 0.8);
   width: 250px;
   margin-top: 30px;
   transition: all 0.2s ease-in-out;
 }
-.container-fluid .container .btn-lg:hover {
+.container-fluid .characters .btn-lg:hover {
   color: white;
   box-shadow: 0 5px 15px rgba(109, 180, 255, 0.4);
 }
