--- a/stylesheets/sass/main-stylesheet.scss
+++ b/stylesheets/sass/main-stylesheet.scss
@@ -70,10 +70,10 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    padding-top: 100px;
-    padding-bottom: 150px;
+    padding-top: 30px;
+    padding-bottom: 50px;
 
-    .container {
+    .characters {
         h2 {
             color: $orange;
             text-align: center;
