minor tweaks to style in final.html

--- a/stylesheets/sass/board-stylesheet.scss
+++ b/stylesheets/sass/board-stylesheet.scss
@@ -67,6 +67,9 @@ body {
     }
 
     #characterToken {
+        display: flex;
+        align-items: center;
+
         img {
             height: 100px;
         }
