--- a/stylesheets/public/final-stylesheet.css
+++ b/stylesheets/public/final-stylesheet.css
@@ -27,19 +27,25 @@ body {
   background-size: cover;
   background-repeat: repeat;
   background-position: center;
+  text-align: center;
 }
 .container-fluid h1 {
-  text-align: center;
   padding-top: 100px;
-  padding-right: 20px;
+  color: #DC832E;
+  background: linear-gradient(to right, #DC832E 0%, #BF2424 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: neonGlow 2s infinite alternate cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+.container-fluid h4 {
+  color: #9F9FA6;
+  padding-top: 10px;
 }
 .container-fluid .lead {
   margin-top: 100px;
   margin-bottom: 100px;
-  text-align: center;
 }
 .container-fluid .btn-lg {
-  justify-content: center;
   color: rgba(255, 255, 255, 0.8);
   width: 250px;
   margin-top: 30px;
