--- a/stylesheets/sass/final-stylesheet.scss
+++ b/stylesheets/sass/final-stylesheet.scss
@@ -13,21 +13,28 @@ body {
     background-size: cover;
     background-repeat: repeat;
     background-position: center;
+    text-align: center;
 
     h1 {
-        text-align: center;
         padding-top: 100px;
-        padding-right: 20px;
+        color: $orange;
+        background: linear-gradient(to right, $orange 0%, $red 100%);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: neonGlow 2s infinite alternate $easeInOutQuad;
+    }
+
+    h4 {
+        color: $lightGrey;
+        padding-top: 10px;
     }
 
     .lead {
         margin-top: 100px;
         margin-bottom: 100px;
-        text-align: center;
     }
 
     .btn-lg {
-        justify-content: center;
         color: rgba(255, 255, 255, .8);
         width: 250px;
         margin-top: 30px;
