--- a/stylesheets/sass/board-stylesheet.scss
+++ b/stylesheets/sass/board-stylesheet.scss
@@ -4,11 +4,15 @@
 
 body {
     background-color: $backgroundColorMain;
-    color: $lightText;
 }
 
 .nav {
     background-color: $black;
+    color: $orange;
+
+    a {
+        color: $orange;
+    }
 }
 
 .container-fluid {
@@ -43,6 +47,7 @@ body {
             background-repeat: no-repeat;
         
             h2 {
+                color: $lightText;
                 text-align: center;
                 line-height: 100px;
             }
